# optmath

./: .clang-format  .cmake-format  .coveragerc  .flake8  .gitignore  .gitmodules  .isort.cfg  .mdformat.toml  .pre-commit-config.yaml  404.html  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-check.txt  requirements-cpp.txt  requirements-dev.txt  requirements-min.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: test-full.yaml  test-windows.yaml
changelog/: index.html
develop/c_extension/: index.html
develop/docs/: index.html
develop/feature/: index.html
develop/formatting/: index.html
develop/quality_checks/: index.html
develop/tox_basics/: index.html
docs/: index.md
docs/develop/: basic_tox.md  c_extension.md  common.md  docs.md  feature.md  formatting.md  quality_checks.md  tox_basics.md
internal/source/: CRectangle.cpp  CThing.cpp
scripts/: build_cmake.py  clang_format_all.py  format_cmake.py  purge_tox_env.py  run_cpp_tests.py
search/: search_index.json
source/internal/: CMakeLists.txt
source/internal/include/: CRectangle.h  CThing.h  Matrix.h  NDBuffer.h  NDIndex.h  NDShape.h  Optmath.h  Shape.h  Tensor.h
source/internal/source/: CRectangle.cpp  CThing.cpp  Matrix.cpp  NDBuffer.cpp  NDIndex.cpp  NDShape.cpp  Shape.cpp  Tensor.cpp
source/internal/templates/: NDBuffer.tpp  Tensor.tpp
source/internal/tests/: test_matrix.cpp  test_ndbuffer.cpp  test_ndindex.cpp  test_ndshape.cpp  test_shape.cpp  test_tensor.cpp
source/optmath/: __init__.py  __main__.py
source/optmath/HCA/: HCA.py  __init__.py  cluster.py  record.py
source/optmath/HCA/distance/: __init__.py  chebyshev.py  distance.py  euclidean.py  manhattan.py
source/optmath/HCA/distance_selector/: __init__.py  complete.py  selector.py  single.py  ward.py
source/optmath/Kmeans/: kmeans.py
source/optmath/PCA/: PCA.py  __init__.py
source/optmath/_internal/: __init__.cpp  __init__.py  __init__.pyi  __init__.pyx  indexer.cpp  indexer.pyx  interface.cpp  interface.pyi  interface.pyx  ndindex.pxd  ndshape.pxd  shape.cpp  shape.pyx  tensor.cpp  tensor.pxd  tensor.pyx
source/optmath/_internal/pyi/: index.pyi  shape.pyi  tensor.pyi
source/optmath/cli/: __init__.py  command.py
source/optmath/common/: __init__.py  asyncio_tools.py  decorators.py  logconfig.py
source/optmath/internal/: interface.cpp
source/optmath/kohonen/: __init__.py  kohonen.py
source/optmath/motifs/: distance.py  exhaustive.py  fasta.py  sequence.py  stats.py
tests/: conftest.py  marker_flag_pair.py  test_matrix.py  test_test.py
tests/test_HCA/: test_HCA.py  test_record.py
tests/test_PCA/: test_PCA.py
tests/test_PCA/data/: data_packed_long.csv  test_seeds.csv
tests/test_common/: test_asyncio_tools.py  test_decorators.py  test_logconfig.py
tests/test_interface/: test_pyrectangle.py
tests/test_internal/: test_index.py  test_shape.py  test_tensor.py
tests/test_kmeans/: test_kmeans.py
tests/test_kohonen/: test_kohonen.py
tests/test_motifs/: dm.fa  dm2.fa  exhaustive.json  exhaustive2.json  test_exhaustive.py  test_fasta.py  test_sequence.py  test_stats.py
